--- a/99bottles/ios/99bottles/Info.plist
+++ b/99bottles/ios/99bottles/Info.plist
@@ -39,9 +39,8 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSAppTransportSecurity</key>
-	<!--See http://ste.vn/2015/06/10/configuring-app-transport-security-ios-9-osx-10-11/ -->
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
@@ -52,5 +51,14 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>MuktaMalar-Bold.ttf</string>
+		<string>MuktaMalar-Medium.ttf</string>
+		<string>MuktaMalar-Regular.ttf</string>
+		<string>MuktaMalar-SemiBold.ttf</string>
+		<string>Rubik-Medium.ttf</string>
+		<string>Rubik-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
