--- a/99bottles/package.json
+++ b/99bottles/package.json
@@ -18,6 +18,9 @@
   "jest": {
     "preset": "jest-expo"
   },
+  "rnpm": {
+    "assets": ["./Assets/Fonts"]
+  },
   "dependencies": {
     "axios": "^0.16.2",
     "expo": "^20.0.0",
