beer mug animations working

--- a/99bottles/package.json
+++ b/99bottles/package.json
@@ -19,7 +19,9 @@
     "preset": "jest-expo"
   },
   "rnpm": {
-    "assets": ["./Assets/Fonts"]
+    "assets": [
+      "./Assets/Fonts"
+    ]
   },
   "dependencies": {
     "axios": "^0.16.2",
