--- a/99bottles/package.json
+++ b/99bottles/package.json
@@ -28,6 +28,8 @@
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
+    "react-native-simple-table": "0.0.2",
+    "react-native-table-component": "^1.0.5",
     "react-navigation": "^1.0.0-beta.11"
   }
 }
