--- a/99bottles/package.json
+++ b/99bottles/package.json
@@ -28,7 +28,9 @@
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
+    "react-native-shadow": "^1.2.1",
     "react-native-simple-table": "0.0.2",
+    "react-native-svg": "^5.4.1",
     "react-native-table-component": "^1.0.5",
     "react-navigation": "^1.0.0-beta.11"
   }
